add unit test and espresso test for MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">JaCoCOExample</string>
+    <string name="error_input_format">Please check your input format!</string>
+    <string name="error_empty_input">Input can not be empty!</string>
 </resources>
